Fixed the scrollbar on the news section.

--- a/app/styles/overrides/_overrides.less
+++ b/app/styles/overrides/_overrides.less
@@ -962,6 +962,11 @@ a {
 
 .news-container {
   overflow-y: auto;
+  position: absolute;
+  top: 114px;
+  bottom: 18px;
+  left: 164px;
+  right: 20px;
 }
 
 
